<resources>
    <string name="app_name">PicMaster</string>
    <string name="string_scale_type">缩放方式</string>
    <string name="string_diy_width">自定义宽</string>
    <string name="string_diy_height">自定义高</string>
    <string name="string_keep">保留原格式</string>
    <string name="string_diy_bai">百分比方式</string>
    <string name="string_rotation">旋转图片</string>
    <string name="string_du">°</string>
    <string name="string_retro">翻转图片</string>
    <string name="string_add_water">添加水印</string>
    <string name="string_retro_type_one">上下翻转</string>
    <string name="string_retro_type_two">左右翻转</string>
    <string name="string_sel_path">选择图片</string>
    <string name="string_text_water">文字水印</string>
    <string name="string_text_advice">建议不超过10个字</string>
    <string name="string_water_trans">水印不透明度 100%</string>
    <string name="string_water_position">水印位置</string>
    <string name="string_image_quality">图片质量 100%</string>
    <string name="string_change_format">转换格式</string>
    <string name="string_no_change">不改变</string>
    <string name="string_jpg">jpg</string>
    <string name="string_png">png</string>
    <string name="string_bmp">bmp</string>
    <string name="string_output_path">输出路径\n
        sdcard/PicMaster/
    </string>
    <string name="string_override">是否覆盖</string>
    <string name="string_user_manual">在本界面配置好需要的格式后，点击添加图片即可自动转为设置好的图片，输出路径在sdcard/PicMaster/下</string>
    <string name="string_path">sdcard/PicMaster/</string>

    <string name="string_add">选择图片&amp;开始处理</string>

    <string name="string_image_water">图片水印</string>

    <string name="string_handle">正在处理中。。。</string>

    <string name="string_success">处理成功</string>

    <string name="string_about">
        欢迎使用PicMaster！\n
        这是给用户的使用说明书\n
        首先在本界面设置好图片所需的参数，比如需要重新设置图片的尺寸那就选择自定义大小，并填入所需的尺寸\n
        如果需要压缩图片的大小，强烈建议使用图片质量，可大幅度压缩图片体积。（所以我把质量压缩给放红色了）\n
        如果需要五毛特效（雾），比如旋转图片，翻转图片或是给图片添加水印，都可以勾选下方的选项后进行详细设置。\n
        在设定好之后，点击最下面的红色大按钮，选择需要进行处理的图片后，即可进行处理，处理好的图片全部都放在sdcard/PicMaster下了\n
        由于设定了固定线程数量，所以大量图片处理会稍慢。\n
        PS：图片水印不能太大，否则将会无效。\n
        PPS:自定义大小以及百分比压缩效果可能不会如意。\n
        PPPS:bug可反馈到邮箱liuzhu234@gmail.com(我不经常看就是了（笑~）)\n
        点击上面右边的说明书也能打开我，主动展示是因为第一次打开才会有的喔~\n
    </string>
</resources>
